feat(device) detect new brand ATVIO: 100011886BK feat(device) detect brand iHunt: Like Hi10 (2021) feat(device) detect brand Realme: C3 (RMX2022) feat(device) detect brand Zuum: Rocket III

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8565,9 +8565,11 @@ iBerry:
 
 # iHunt
 iHunt:
-  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S10 Tank PRO 2020|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021|Like 11 Panda Pro'
+  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S10 Tank PRO 2020|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021|Like 11 Panda Pro|Like_Hi10_2021'
   device: 'smartphone'
   models:
+    - regex: 'Like_Hi10_2021'
+      model: 'Like Hi10 (2021)'
     - regex: 'iHunt_Like'
       model: 'Like'
     - regex: 'S10_Tank_2019'
@@ -13563,7 +13565,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[0357]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:0[13]|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|42|9[1357]|51|6[16]|71)|33[57]0|3357|336[036]|3263|3235|3430|3381)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[0357]2|2[257]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:0[13]|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|42|9[1357]|51|6[16]|71)|33[57]0|3357|336[036]|3263|3235|3430|3381)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?RMX3142(?:[);/ ]|$)'
@@ -13640,7 +13642,7 @@ Realme:
       model: 'C1'
     - regex: 'RMX194[1235](?:[);/ ]|$)'
       model: 'C2'
-    - regex: 'RMX202[107](?:[);/ ]|$)'
+    - regex: 'RMX202[1207](?:[);/ ]|$)'
       model: 'C3'
     - regex: 'RMX2185(?:[);/ ]|$)'
       model: 'C11'
@@ -21236,7 +21238,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET II|Akus (?:PRO|Z1?)|COVET|MAGNO(?:-S)?|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|Android 6.+ UNIQ(?: Build|[);])|(?:ROCKET III?|Akus (?:PRO|Z1?)|COVET|MAGNO(?:-S)?|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1|M2))?|GRAVITY [ZM]|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AKUS PRO'
@@ -21281,8 +21283,8 @@ Zuum:
       model: 'Aura X'
     - regex: 'RONI'
       model: 'Roni'
-    - regex: 'ROCKET II'
-      model: 'Rocket II'
+    - regex: 'ROCKET (III?)'
+      model: 'Rocket $1'
     - regex: 'Android 6.+ UNIQ(?: Build|[);])'
       model: 'Uniq'
     - regex: 'Zuum[ _-]([^;/]+) Build'
@@ -26629,6 +26631,13 @@ Meizu:
       model: '$1'
     - regex: 'MZ-([^/;]+) Build'
       model: '$1'
+
+# Atvio
+Atvio:
+  regex: '(100011886BK)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
 
 # Devices with undectable brand, but detectable model
 Unknown:
