--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13789,6 +13789,8 @@ OPPO:
       model: 'A54s'
     - regex: 'PEM[MT][02]0(?:[);/ ]|$)'
       model: 'A55 5G'
+    - regex: 'CPH2325(?:[);/ ]|$)'
+      model: 'A55'
     - regex: '(?:A102OP|CPH2309)(?:[);/ ]|$)'
       model: 'A55s 5G'
     - regex: '(?:OPPO[ _]?)?CPH170[15](?:[);/ ]|$)'
@@ -13841,6 +13843,8 @@ OPPO:
       model: 'A94'
     - regex: '(?:CPH2197)(?:[);/ ]|$)'
       model: 'A94 5G'
+    - regex: 'CPH2365(?:[);/ ]|$)'
+      model: 'A95'
     - regex: 'PCE[TM]00(?:[);/ ]|$)'
       model: 'A9x'
     - regex: '(?:OPPO[ _]?)?CPH1851(?:[);/ ]|$)'
@@ -13875,6 +13879,8 @@ OPPO:
       model: 'F9'
     - regex: '(?:OPPO[ _]?)?CPH1823(?:[);/ ]|$)'
       model: 'F9 Pro'
+    - regex: '(?:OPPO[ _]?)?CPH2223(?:[);/ ]|$)'
+      model: 'F19s'
     - regex: '(?:OPPO[ _]?)?CPH2285(?:[);/ ]|$)'
       model: 'F19 Pro'
     - regex: '(?:OPPO[ _]?)?CPH2213(?:[);/ ]|$)'
@@ -14041,7 +14047,7 @@ OPPO:
       model: 'Reno 5 Pro Plus 5G'
     - regex: 'CPH1921(?:[);/ ]|$)'
       model: 'Reno 5G'
-    - regex: '(?:CPH2235|PEQM00)(?:[);/ ]|$)'
+    - regex: '(?:CPH2235|PEQM00|CPH2251)(?:[);/ ]|$)'
       model: 'Reno 6'
     - regex: 'CPH2237(?:[);/ ]|$)'
       model: 'Reno 6 Z 5G'
@@ -19620,7 +19626,7 @@ Zopo:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?|pomelo)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|KSR|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|210611(?:8C|19BI)|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|Qin 2(?: Pro)?|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|21081111RG|2109119D[GI]|2107113S[GR]|joyeuse|galahad|begonia| MDG1'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?|pomelo)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|KSR|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|210611(?:8C|19BI)|M2004J(?:7[AB]|19)C|M2012K11(?:[CGI]|A[CI])|M2011K2[CG]|M2011J18C|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYIL]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|Qin 2(?: Pro)?|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119(?:[AD]G|AL)|2107119DC|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182[CG]|21081111RG|2109119D[GI]|21091116C|2107113S[GR]|joyeuse|galahad|begonia| MDG1'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -19790,7 +19796,7 @@ Xiaomi:
       model: 'Redmi 9T'
     - regex: '(?:M2006C3MNG|Redmi 9C NFC)(?:[);/ ]|$)'
       model: 'Redmi 9C NFC'
-    - regex: '21061119[AD]G(?:[);/ ]|$)'
+    - regex: '21061119(?:[AD]G|AL|DC)(?:[);/ ]|$)'
       model: 'Redmi 10'
     - regex: '21061119BI(?:[);/ ]|$)'
       model: 'Redmi 10 Prime'
@@ -19822,6 +19828,8 @@ Xiaomi:
       model: 'Qin 2 Pro'
     - regex: 'Qin 2(?:[);/ ]|$)'
       model: 'Qin 2'
+    - regex: '2107119DC(?:[);/ ]|$)'
+      model: 'CC11'
 
 
       # specific tablet models
@@ -19930,6 +19938,9 @@ Xiaomi:
       device: 'phablet'
     - regex: '(?:M2101K6[GIRP]|M2104K10AC|Redmi Note 10 Pro)(?:[);/ ]|$)'
       model: 'Redmi Note 10 Pro'
+      device: 'phablet'
+    - regex: '21091116C(?:[);/ ]|$)'
+      model: 'Redmi Note 11 Pro'
       device: 'phablet'
     - regex: '(?:M1908C3JGG|Redmi Note 8 \(2021\))(?:[);/ ]|$)'
       model: 'Redmi Note 8 (2021)'
