feat(device) detect brand Tecno Mobile: Camon 18P (TECNO CH7n) feat(device) detect brand Samsung: Galaxy A12 (SM-A125N) feat(device) detect brand Smartisan: U3 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15632,7 +15632,7 @@ Samsung:
       model: 'Galaxy A10e'
     - regex: '(?:SAMSUNG-)?SM-A115(?:A[PZ]|U1|[AFMUW])'
       model: 'Galaxy A11'
-    - regex: '(?:SAMSUNG-)?SM-A12(?:5[FMU]|7F)'
+    - regex: '(?:SAMSUNG-)?SM-A12(?:5[FMUN]|7F)'
       model: 'Galaxy A12'
     - regex: '(?:SAMSUNG-)?SM-(?:A205(?:U1|YN|[FGSWU])|S205DL)|SC-02M|SCV46'
       model: 'Galaxy A20'
@@ -16277,7 +16277,7 @@ Smartfren:
 
 # Smartisan
 Smartisan:
-  regex: '(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DT2002C|DE106|DT190[12]A|O[CE]106|OS103|O[CS]105)[ /;\)]'
+  regex: 'Smartisan[_ ]|(SM(?:70[15]|[89]01|919)|OD10[35]|YQ60[1357]|DT2002C|DE106|DT190[12]A|O[CE]106|OS103|O[CS]105)[ /;\)]'
   device: 'smartphone'
   models:
     - regex: 'SM70[15]'
@@ -16306,6 +16306,8 @@ Smartisan:
       model: 'Nut Pro 3'
     - regex: 'OS103[ /;\)]'
       model: 'JianGuo Pro 2'
+    - regex: 'Smartisan U3 Pro'
+      model: 'U3 Pro'
 
 # STF Mobile
 STF Mobile:
@@ -17794,6 +17796,8 @@ Tecno Mobile:
       model: 'Camon 18 Premier'
     - regex: 'Tecno[ _-]CH6n?(?:[);/ ]|$)'
       model: 'Camon 18'
+    - regex: 'Tecno[ _-]CH7n?(?:[);/ ]|$)'
+      model: 'Camon 18P'
     - regex: 'Tecno[ _-]CA6(?:[);/ ]|$)'
       model: 'Camon CM'
     - regex: 'Tecno[ _-]CA7(?:[);/ ]|$)'
