--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12395,7 +12395,7 @@ Motorola:
       model: 'Droid RAZR D3'
     - regex: '(?:MOT-|Motorola-)?XT925'
       model: 'Droid RAZR HD'
-    - regex: '(?:MOT-|Motorola-)?(?:XT102[12]|XT830C)|moto e(?:[);/ ]|$)'
+    - regex: '(?:MOT-|Motorola-)?(?:XT102[12]|XT830C)'
       model: 'Moto E'
     - regex: '(?:MOT-|Motorola-)?XT1706'
       model: 'Moto E3 Power'
@@ -12413,6 +12413,8 @@ Motorola:
       model: 'Moto E$1'
     - regex: 'Moto E\(?([567])s\)?(?:[);/ ]|$)'
       model: 'Moto E$1s'
+    - regex: 'Moto E(?: Build|[;)])'
+      model: 'Moto E'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
     - regex: '(?:MOT-|Motorola-)?XT1565'
@@ -16005,7 +16007,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-9005(?:[);/ ]|$)'
       model: 'Galaxy Note 3 LTE'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:W8|[05689][VQ]?|[AKLPSTV])?|SCL22|SC-01F|SC-02F)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:W8|[05689][VQ]?|[AKLPSTV])?|SCL22|SC-01F|SC-02F)'
       model: 'Galaxy Note 3'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-(?:N910|910U)|N9100(?:[);/ ]|$)'
