feat(device) detect brand Ulefone: Tab A7, Power Armor 14 feat(device) detect brand Teclast: M40 Pro feat(device) detect brand SuperSonic: SC-2110 feat(device) detect brand Motorola: Moto E30, Moto E40, Edge 20 feat(device) detect brand Symphony: Atom II feat(device) detect brand Zuum: Stellar Max
feat(device) added test for brand Realme: 6 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12483,6 +12483,8 @@ Motorola:
       model: 'Edge 20 Lite'
     - regex: '(?:MOT-|Motorola-)?edge 20 pro'
       model: 'Edge 20 Pro'
+    - regex: '(?:MOT-|Motorola-)?edge (\d+)'
+      model: 'Edge $1'
     - regex: '(?:MOT-|Motorola-)?edge'
       model: 'Edge'
     - regex: '(?:MOT-|Motorola-)?one vision plus'
@@ -16385,7 +16387,7 @@ Stonex:
 
 # SuperSonic
 SuperSonic:
-  regex: '(SC-[0-9]+[a-z]+)'
+  regex: '(SC-[0-9]+[a-z]+|SC-2110)'
   device: 'tablet'
   model: '$1'
 
@@ -17596,6 +17598,8 @@ Symphony:
   models:
     - regex: 'ZVIII'
       model: 'ZVIII'
+    - regex: 'Symphony Atom ii'
+      model: 'Atom II'
     - regex: 'roar[ _]?(V20|E80|V78|V95|V150)(?:[);/ ]|$)'
       model: 'Roar $1'
     - regex: 'SYMPHONY[ \_]([a-z0-9]+)'
@@ -17687,7 +17691,8 @@ T-Mobile:
 
 # Teclast (teclast.com)
 Teclast:
-  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T40 Plus|T30|P80[XH]|P20HD|P10[_ ]HD|M40|P10S|M30_Pro|M40SE|P80)_(?:ROW|EEA|RUS)|T10\(E3C[56]\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)|X10 \(M1D3\)|M89 Pro|M40\(N9H3\)|M40(?:SE|Pro)_EEA'
+  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T40 Plus|T30|P80[XH]|P20HD|P10[_ ]HD|M40|P10S|M30_Pro|M40SE|P80)_(?:ROW|EEA|RUS)|T10\(E3C[56]\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)|X10 \(M1D3\)|M89 Pro|M40\(N9H3\)|M40(?:SE|Pro)_(?:ROW|EEA|RUS)'
+
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -17704,7 +17709,7 @@ Teclast:
       model: 'P10HD'
     - regex: 'P80[_ ](?:ROW|EEA)'
       model: 'P80'
-    - regex: 'M([43]0)_?Pro[_ ](?:ROW|EEA)'
+    - regex: 'M([43]0)_?Pro[_ ](?:ROW|EEA|RUS)'
       model: 'M$1 Pro'
     - regex: 'M20_4G'
       model: 'M20 4G'
@@ -18474,8 +18479,8 @@ Ulefone:
       model: 'P6000 Plus'
     - regex: 'Paris_X'
       model: 'Paris X'
-    - regex: 'Power Armor 13(?:[);/ ]|$)'
-      model: 'Power Armor 13'
+    - regex: 'Power Armor (\d+)(?:[);/ ]|$)'
+      model: 'Power Armor $1'
     - regex: 'Armor[ _]X([236])(?:[);/ ]|$)'
       model: 'Armor X$1'
     - regex: 'Armor[ _]6S(?:[);/ ]|$)'
@@ -18511,7 +18516,9 @@ Ulefone:
     - regex: 'Note (9|11)P(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Note $1P'
-
+    - regex: 'Ulefone[_ ]Tab[_ ]([^;/)]+)(?: Build|[);])'
+      device: 'tablet'
+      model: 'Tab $1'
     - regex: 'Ulefone[_ ](X|S1[ _]Pro|S[17])(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Ulefone[ _-]?([^;/]+) Build'
@@ -21324,6 +21331,8 @@ Zuum:
       model: 'Stellar Mini'
     - regex: 'STELLAR MINI'
       model: 'Stellar Mini'
+    - regex: 'STELLAR Max'
+      model: 'Stellar Max'
     - regex: 'STELLAR'
       model: 'Stellar'
     - regex: 'GRAVITY ([MZ])'
