--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -45,7 +45,7 @@
 # YunOS (Android based)
 ##########
 - regex: '(?:Ali)?YunOS[ /]?(\d+[\.\d]+)?'
-  name: 'YunOS'
+  name: 'YunOs'
   version: '$1'
 
 ##########
@@ -970,7 +970,7 @@
   version: '$1'
 
 - regex: 'AppleTV(?:/?(\d+[\.\d]+))?'
-  name: 'Apple TV'
+  name: 'tvOS'
   version: '$1'
 
 - regex: 'WebTV/(\d+[\.\d]+)'
