renamed YunOs to YunOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -45,7 +45,7 @@
 # YunOS (Android based)
 ##########
 - regex: '(?:Ali)?YunOS[ /]?(\d+[\.\d]+)?'
-  name: 'YunOs'
+  name: 'YunOS'
   version: '$1'
 
 ##########
