--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13832,7 +13832,7 @@ OPPO:
     - regex: '(?:CPH2203)(?:[);/ ]|$)'
       model: 'A94'
     - regex: '(?:CPH2197)(?:[);/ ]|$)'
-      model: 'A94 5G'
+      model: 'A74 5G'
     - regex: 'PCE[TM]00(?:[);/ ]|$)'
       model: 'A9x'
     - regex: '(?:OPPO[ _]?)?CPH1851(?:[);/ ]|$)'
@@ -13977,9 +13977,7 @@ OPPO:
       model: 'Reno'
     - regex: 'CPH1983(?:[);/ ]|$)'
       model: 'Reno A'
-    - regex: 'PCCM00(?:[);/ ]|$)'
-      model: 'Reno 10X'
-    - regex: 'CPH1919(?:[);/ ]|$)'
+    - regex: '(?:CPH1919|PCCM00)(?:[);/ ]|$)'
       model: 'Reno 10X Zoom'
     - regex: '(?:PCKM00|CPH1907)(?:[);/ ]|$)'
       model: 'Reno 2'
