updated tvOS and YunOS regexes (#6954)
* renamed YunOs to YunOS
* renamed AppleTV to tvOS

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -970,7 +970,7 @@
   version: '$1'
 
 - regex: 'AppleTV(?:/?(\d+[\.\d]+))?'
-  name: 'Apple TV'
+  name: 'tvOS'
   version: '$1'
 
 - regex: 'WebTV/(\d+[\.\d]+)'
