--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -135,6 +135,10 @@
 ##########
 # Android
 ##########
+- regex: 'Android Marshmallow'
+  name: 'Android'
+  version: '6'
+
 - regex: '(?:Podbean|Podimo)(?:.+)?/Android'
   name: 'Android'
   version: ''
