Improves Apple brand detection, improves Android version detection, adds detection for CISPA bot (#6955)
* Add iPadOS to array
* Improves version detection for Android
* Adds detection for CISPA Web Analyzer

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4459,3 +4459,12 @@
     name: Cincraw
     category: Crawler
     url: http://cincrawdata.net/bot/
+-
+  user_agent: CISPA Web Analyzer (https://notify.cispa.de)
+  bot:
+    name: CISPA Web Analyzer
+    category: Crawler
+    url: https://notify.cispa.de/
+    producer:
+      name: 'CISPA - Helmholtz-Zentrum für Informationssicherheit gGmbH'
+      url: https://cispa.de/en
