feat(device) detect brand NEC: LAVIE Tab E TE510, LAVIE Tab E TE410, LAVIE Tab E TE507, LAVIE Tab S TS508, LAVIE Tab E 10FHD2 feat(device) detect brand Lenovo: Yoga Pad Pro (YT-K606F), dtab Compact 42A (d-42A) feat(device) detect brand Asus: ZenPad 7.0 (P002) feat(device) detect brand KDDI: iida InfoBar A01 feat(device) detect brand ZTE: Blade V8 (BV0800) feat(device) detect brand Motorola: Moto G50 5G feat(device) detect brand Sharp: Aquos Zero 6 (SH-RM18)
feat(device) added test for brand Sony: Xperia Z1 (SonySOL23)
feat(device) added test for brand Samsung: Galaxy Z Fold 3 5G (SM-F926U1), Galaxy S9+ (SM-G965U1)

feat(phpunit) set memory limit 512Mb for config

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,10 @@
          stopOnFailure="false"
          bootstrap="vendor/autoload.php"
 >
+    <php>
+        <ini name="memory_limit" value="512M" />
+    </php>
+
     <testsuites>
         <testsuite name="Device Detector Test Suite">
             <directory>./Tests/</directory>
