feat(device) detect new brand Ematic: EGQ101 feat(device) detect brand M-Horse: Power 1 feat(device) detect brand QMobile: i8i Pro feat(device) detect brand ZTE: Blade A6 feat(device) detect brand OPPO: A11k (CPH2071)
feat(device) added test for brand Walton: Primo N3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13810,6 +13810,8 @@ OPPO:
       model: 'A11x'
     - regex: 'CPH1923(?:[);/ ]|$)'
       model: 'A1k'
+    - regex: 'CPH2071(?:[);/ ]|$)'
+      model: 'A11k'
     - regex: 'CPH1925(?:[);/ ]|$)'
       model: 'A1s'
     - regex: 'CPH2269(?:[);/ ]|$)'
@@ -17043,6 +17045,8 @@ QMobile:
       model: 'Nice S'
     - regex: 'i7i 2020'
       model: 'i7i (2020)'
+    - regex: 'i8i PRO'
+      model: 'i8i Pro'
     - regex: 'Q Infinity PRO'
       model: 'Q Infinity Pro'
     - regex: 'Q Infinity E Lite'
@@ -21153,7 +21157,7 @@ ZTE:
       model: 'Blade V$1'
     - regex: 'BLADE V0820(?:[);/ ]|$)'
       model: 'Blade V8 Lite'
-    - regex: '(?:Blade[ _])?(Apex2|G (LTE|Lux)|Vec|A(320|510|51|30|3))'
+    - regex: '(?:Blade[ _])?(Apex2|G (LTE|Lux)|Vec|A(320|510|51|30|[36]))'
       model: 'Blade $1'
     - regex: 'Z768G(?:[);/ ]|$)'
       model: 'Midnight'
@@ -26247,11 +26251,13 @@ VIWA:
 
 # M-Horse (www.mhorse.com)
 M-Horse:
-  regex: 'M-HORSE|(?:Pure (?:3|2A?)|Pure ?1)(?:[);/ ]|$)'
+  regex: 'M-HORSE|(?:Pure (?:3|2A?)|Pure ?1|Power1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Pure ?([13]|2A?)(?:[);/ ]|$)'
       model: 'Pure $1'
+    - regex: 'Power1'
+      model: 'Power 1'
 
 # ProVision (www.provision.co.ir/en)
 ProVision:
@@ -26750,6 +26756,12 @@ FEONAL:
 Sunmi:
   regex: '(V1s)-G(?:[);/ ]|$)'
   device: 'peripheral'
+  model: '$1'
+
+# Ematic (ematic.us)
+Ematic:
+  regex: '(EGQ101)(?:[);/ ]|$)'
+  device: 'tablet'
   model: '$1'
 
 # Devices with undectable brand, but detectable model
