--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -3587,3 +3587,57 @@
     model: H10 Play
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Mecool-BB2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36 OPR/66.1.3445.62185
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 66.1.3445.62185
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mecool
+    model: BB2
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; STV_32LED30C Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.123 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 64.0.3282.123
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Shivaki
+    model: STV-32LED30C
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; TF-LED32S75T2S Build/PTT1.190222.001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.91 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 69.0.3497.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Telefunken
+    model: TF-LED32S75T2S
+  os_family: Android
+  browser_family: Chrome
