feat(device) detect new brand Vankyo: MatrixPad S10, MatrixPad S8, MatrixPad S7 feat(device) detect brand NavRoad: Nexo Evo
feat(device) added test for brand Samsung: Galaxy Note 9 (SM-N960U1)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26741,7 +26741,7 @@ Polestar:
 
 # NavRoad (navroad.com)
 NavRoad:
-  regex: '(?:NEXO (?:Smarty|handy|SMART DUO)|MOVIO 2)(?:[);/ ]|$)'
+  regex: '(?:NEXO (?:Smarty|handy|SMART DUO|Evo)|MOVIO 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Nexo Smarty'
@@ -26751,6 +26751,9 @@ NavRoad:
     - regex: 'NEXO SMART DUO'
       device: 'tablet'
       model: 'Nexo Smart Duo'
+    - regex: 'NEXO EVO'
+      device: 'tablet'
+      model: 'Nexo Evo'
     - regex: 'MOVIO 2'
       device: 'tablet'
       model: 'Movio 2'
@@ -26764,6 +26767,14 @@ Smarty:
       model: 'Mini $1'
     - regex: 'Maxi 10L'
       model: 'Maxi 10L'
+
+# Vankyo
+Vankyo:
+  regex: 'Vankyo[_ ]'
+  device: 'tablet'
+  models:
+    - regex: 'Vankyo[_ ]S(10|[78])'
+      model: 'MatrixPad S$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
